# picky-test

./: Cargo.toml
src/: main.rs
