[package]
name = "picky-test"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
picky = { version = "6.3", features = ["chrono_conversion"] }
picky-asn1-der = "0.2"
picky-asn1-x509 = "0.6"
rsa = "0.4"
digest = "0.9"
sha2 = "0.9"
